--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,10 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
+collections:
+  projects:
+    output: true
+
 # Build settings
 theme: minima
 
