--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Цитрониум
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/citronium-landing" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://citronium.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
