--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:  
   app:
     build: .
-    container_name: citronium-landing
+#    container_name: citronium-landing
     volumes:
       - citronium_landing:/var/www/html/'
     #restart: always
