--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,9 +5,9 @@ RUN ln -snf /usr/share/zoneinfo/"Europe/Moscow" /etc/localtime && echo "Europe/M
 RUN apt-get update \
         && apt-get install -y nginx php7.4 php7.4-cli php7.4-common php7.4-curl php7.4-dev php7.4-mysql php7.4-fpm
  
-COPY conf/nginx.conf /etc/nginx/sites-available/default
+COPY app/conf/nginx.conf /etc/nginx/sites-available/default
  
-COPY conf/entrypoint.sh /entrypoint.sh
+COPY app/conf/entrypoint.sh /entrypoint.sh
 
 RUN chmod a+x /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
