--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -13,5 +13,9 @@ services:
       - traefik.docker.network=traefik_proxy
     networks:      
       - traefik
+networks:
+  traefik:
+    external:
+      name: traefik_proxy
 volumes:
   citronium_landing:
