--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:  
   app:
-    build: .
+    image: registry.citronium.com/citronium-landing:${APP_VERSION:-latest}    
 #    container_name: citronium-landing
     volumes:
       - citronium_landing:/var/www/html/'
