--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -2,9 +2,9 @@ version: '3'
 services:  
   app:
     image: registry.citronium.com/citronium-landing:${APP_VERSION:-latest}    
-#    container_name: citronium-landing
+    container_name: citronium-landing
     volumes:
-      - citronium_landing:/var/www/html/'
+      - citronium_landing:/var/www/html
     #restart: always
     labels:
       - traefik.backend=citronium-landing
