--- a/app/Jenkinsfile
+++ b/app/Jenkinsfile
@@ -36,8 +36,9 @@ node {
       
       stage("Clear") {
         sh "rm -Rfv ./_site"
-        sh "rm -Rfv ./html"        
-        sh "docker rm -f \$(docker ps --filter name=citronium-landing)"
+        sh "rm -Rfv ./html"
+        //sh "docker stop citronium-landing"
+        //sh "docker rm citronium-landing"
         sh "docker volume rm -f citronium-landing_citronium_landing"
       }
         
