--- a/app/Jenkinsfile
+++ b/app/Jenkinsfile
@@ -51,7 +51,7 @@ node {
         sh "docker run -d --name landing-tmp -v landing-tmp:/root busybox:1.35.0 tail -f /dev/null"
         sh "docker cp ./ landing-tmp:/root/"
         sh "docker stop landing-tmp"
-        sh "docker run -d --name citronium-landing-jekyll -v landing-tmp:/srv/jekyll jekyll/builder:3.8 jekyll build"
+        sh "docker run -d --name citronium-landing-jekyll -v landing-tmp:/srv/jekyll jekyll/builder jekyll build"
         sh "docker start landing-tmp"
         sh "docker cp landing-tmp:/root/_site ./html"
         sh "docker stop landing-tmp"
