--- a/app/Jenkinsfile
+++ b/app/Jenkinsfile
@@ -48,8 +48,8 @@ node {
         
       stage("Jekyll Build") {
         sh "docker volume create landing-tmp"
-        sh "docker run -d --name citronium-landing-jekyll -v landing-tmp:/srv/jekyll jekyll/builder tail -f /dev/null"
-        sh "docker cp ./ citronium-landing-jekyll://srv/jekyll/"
+        sh "docker run -d --name citronium-landing-jekyll -v landing-tmp:/srv/jekyll jekyll/builder:3.8 tail -f /dev/null"
+        sh "docker cp ./ citronium-landing-jekyll:/srv/jekyll/"
         sh "docker stop landing-tmp"
         sh "docker run -d --name citronium-landing-jekyll -v landing-tmp:/srv/jekyll jekyll/builder tail -f /dev/null"
         sh "docker start landing-tmp"
