--- a/app/Jenkinsfile
+++ b/app/Jenkinsfile
@@ -50,12 +50,12 @@ node {
         sh "docker volume create landing-tmp"
         sh "docker run -d --name citronium-landing-jekyll -v landing-tmp:/srv/jekyll jekyll/builder:3.8 tail -f /dev/null"
         sh "docker cp ./ citronium-landing-jekyll:/srv/jekyll/"
-        sh "docker stop citronium-landing-jekyll"
-        sh "docker rm citronium-landing-jekyll"
-        sh "docker run -d --name citronium-landing-jekyll -v landing-tmp:/srv/jekyll jekyll/builder:3.8 jekyll build"
-        sh "sleep 600"
-        sh "docker rm citronium-landing-jekyll"
-        sh "docker run -d --name citronium-landing-jekyll -v landing-tmp:/srv/jekyll jekyll/builder:3.8 tail -f /dev/null"        
+        //sh "docker stop citronium-landing-jekyll"
+        //sh "docker rm citronium-landing-jekyll"
+        sh "mkdir html"
+        sh "docker exec citronium-landing-jekyll jekyll build"        
+        //sh "docker rm citronium-landing-jekyll"
+        //sh "docker run -d --name citronium-landing-jekyll -v landing-tmp:/srv/jekyll jekyll/builder:3.8 tail -f /dev/null"        
         sh "docker cp citronium-landing-jekyll:/srv/jekyll/_site/ ./html/"
         //sh "docker stop landing-tmp"
         //sh "docker volume rm landing-tmp"
