--- a/app/Jenkinsfile
+++ b/app/Jenkinsfile
@@ -50,7 +50,7 @@ node {
         sh "docker volume create landing-tmp"
         sh "docker run -d --name citronium-landing-jekyll -v landing-tmp:/srv/jekyll jekyll/builder:3.8 tail -f /dev/null"
         sh "docker cp ./ citronium-landing-jekyll:/srv/jekyll/"        
-        sh "mkdir html"
+        //sh "mkdir html"
         sh "docker exec citronium-landing-jekyll jekyll build"                
         sh "docker cp citronium-landing-jekyll:/srv/jekyll/_site ./html"       
         sh "docker cp ./html citronium-landing:/var/www/"
