--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Цитрониум
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-baseurl: "/citronium-landing" # the subpath of your site, e.g. /blog
-url: "https://citronium.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://citronium-landing.psrv5.citronium.com/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
