--- a/app/conf/nginx.conf
+++ b/app/conf/nginx.conf
@@ -1,12 +1,13 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name  localhost;
+    server_name  citronium-landing.psrv5.citronium.com;
  
     root /var/www/html/;
-     
+    index index.php index.html index.htm;
+    
     location / {
-        try_files $uri /index.php$is_args$args;
+        try_files $uri $uri/ /index.php$is_args$args;
     }
  
     location ~ ^/index\.php(/|$) {
