--- a/app/conf/nginx.conf
+++ b/app/conf/nginx.conf
@@ -3,10 +3,11 @@ server {
     listen [::]:80;
     server_name  citronium-landing.psrv5.citronium.com;
  
-    root /var/www/html/;    
+    root /var/www/html/;
+    index index.php index.html index.htm;
     
     location / {
-         root /var/www/html/;
+         try_files $uri $uri.html $uri/ /index.php$is_args$args;;
     }
     
      
