--- a/app/conf/nginx.conf
+++ b/app/conf/nginx.conf
@@ -4,7 +4,7 @@ server {
     server_name  citronium-landing.psrv5.citronium.com;
  
     root /var/www/html/;
-    index index.php index.html index.htm;
+    #index index.php index.html index.htm;
     
     location / {
          try_files $uri $uri.html $uri/ /index.php$is_args$args;;
