--- a/app/conf/nginx.conf
+++ b/app/conf/nginx.conf
@@ -7,7 +7,7 @@ server {
     #index index.php index.html index.htm;
     
     location / {
-         try_files $uri $uri.html $uri/ /index.php$is_args$args;;
+         try_files $uri $uri.html $uri/ /index.php$is_args$args;
     }
     
      
