added 3D images in section what-we-do

--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,9 @@ github_username:  jekyll
 # Build settings
 theme: minima
 
+autoprefixer:
+  only_production: false
+
 plugins:
   - jekyll-feed
   - jekyll-autoprefixer
