--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_username:  jekyll
 theme: minima
 
 autoprefixer:
-  only_production: false
+  only_production: true
 
 plugins:
   - jekyll-feed
