--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Citronium | Разработка веб и мобильных приложений, высоконагруженных систем | Студия Citronium
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://citronium-landing.psrv5.citronium.com/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://citronium.ru" # the base hostname & protocol for your site, e.g. http://example.com
 lang: ru 
 
 
